--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -33,11 +33,11 @@
                     <div class="table-responsive p-0">
                         <table class="table align-items-center mb-2 table-collapse">
                             <thead>
-                            <tr class="task-row-separator">
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
+                            <tr>
+                                <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
                                     Select
                                 </th>
-                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" style="width: 100%">
+                                <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 w-100">
                                     Task
                                 </th>
                                 <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
@@ -52,8 +52,8 @@
                             <tr {% if form.instance.done %}
                                                  data-bs-toggle="tooltip" data-bs-placement="top" title="Done"
                                                  {% endif %}>
-                                <td style="width: 40px;" >
-                                    <div class="d-flex px-4 responsive__mobile-2" >
+                                <td>
+                                    <div class="d-flex justify-content-center responsive__mobile-2" >
                                         <div class="form-check" >
                                             <div class="checkbox-wrapper {% if form.instance.done %} checked-tooltip {% endif %}">
                                                 <input type="checkbox"
@@ -277,6 +277,11 @@ document.addEventListener("DOMContentLoaded", function () {
         cursor: pointer;
     }
 
+    .checkbox-wrapper {
+        display: flex;
+        justify-content: center;
+    }
+
     .form-check:not(.form-switch) .form-check-input[type="checkbox"] {
         border-color: #949db0;
     }
@@ -314,7 +319,7 @@ document.addEventListener("DOMContentLoaded", function () {
         }
     }
 
-    @media (max-width: 389px) {
+    @media (max-width: 392px) {
         .responsive__mobile-1 {
             padding: 0.5rem !important;
             width: 36px !important;
