fix: punchbutton aligning

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -32,7 +32,7 @@
                 {% if ongoingShift %}
                 <span id="clock" style="font-size:2.5rem"></span>
                 {% endif %}
-                <div class="px-4" style="height: 100%; display: flex;">
+                <div class="px-4" style="display: flex;">
                     <a id="punchShiftButton" class="btn bg-gradient-primary mt-3 w-100" style="align-self: flex-end;"
                        href="#">
                         {% if ongoingShift %} Punch out {% else %} Punch in {% endif %}
