--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -306,7 +306,7 @@
       margin-top: -0.4rem;
     }
     ul.shifts li .shift {
-      background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
+      background-image: linear-gradient(310deg, var(--bs-primary) 0%, var(--bs-primary) 100%);
       padding: 0.7rem 1.4rem;
       border-radius: 5px;
       display: flex;
