--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -1,4 +1,10 @@
 {% extends "base_generic.html" %}
+{% load static %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/tables.css' %}" type="text/css">
+{% endblock extra_css %}
+
 
 {% block widgets %}
     <div class="dropdown">
@@ -11,7 +17,7 @@
             {% endfor %}
         </ul>
     </div>
-{% endblock %}
+{% endblock widgets %}
 
 {% block content %}
 
@@ -41,7 +47,7 @@
                                         <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__hide responsive__mobile-1">
                                             Storages
                                         </th>
-                                        <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
                                             Needed
                                         </th>
                                     </tr>
@@ -54,7 +60,7 @@
                                         {% if product.needs_packaging and target_branch in product.get_storage_branches %}
 
                                             <tr class="entry">
-                                                <td style="width: 40px;">
+                                                <td style="width: 80px;">
                                                     <div class="d-flex px-4 responsive__mobile-2">
                                                         <div class="form-check">
                                                             <div class="checkbox-wrapper">
@@ -66,14 +72,15 @@
                                                         </div>
                                                     </div>
                                                 </td>
-                                                <td >
+                                                <td>
                                                     <div class="d-flex align-items-center">
                                                         <label for="checkbox{{ forloop.counter }}" class="sr-only">Select {{ product.name }}</label>
                                                         <h6 class="mb-0 text-sm responsive__mobile-3">
                                                             {{ product.name }}
                                                         </h6>
                                                     </div>
-                                                    <div class="responsive__show">
+                                                    <!-- Product Storages Display Mobile -->
+                                                    <div class="mt-1 responsive__show">
                                                         {% for product_storage in product.product_storages.all %}
                                                             {% if not product_storage.main_storage and product_storage.oos and product_storage.branch == target_branch %}
                                                                 <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
@@ -89,7 +96,7 @@
                                                     </div>
                                                 </td>
 
-                                                <!-- Product Storages Display -->
+                                                <!-- Product Storages Display Laptop-->
                                                 <td class="responsive__hide" style="width: 100%;">
                                                     <div class="badge-wrap d-flex align-items-center">
                                                         {% for product_storage in product.product_storages.all %}
@@ -138,199 +145,6 @@
     </div>
 
 
+<script src="{% static 'js/tables_appearence.js' %}"></script>
 
-
-<style>
-    .bg-gradient-primary {
-        background-image: linear-gradient(310deg, #141727 0%, #3A416F 100%);
-        float: right;
-        max-width: 200px;
-    }
-    .form-check-input {
-        appearance: none;
-        scale: 0.85;
-    }
-
-    .checkbox-wrapper {
-        display: flex;
-        justify-content: center;
-    }
-
-    .form-check:not(.form-switch) .form-check-input[type="checkbox"] {
-        border-color: #949db0;
-    }
-
-    .form-check-input:disabled[type="checkbox"] {
-        background-image: linear-gradient(310deg, #17ad37 0%, #84dc14 100%);
-    }
-
-    .table-collapse {
-        border-collapse: collapse;
-    }
-
-    .responsive__show {
-        display: none;
-    }
-    .badge-wrap {
-        height: 20px;
-    }
-    .badge {
-        background-color: rgba(58, 65, 111, 0.10);
-        padding: 0.2rem 0.4rem;
-        font-size: 10px;
-        gap: 0.5rem;
-    }
-    .badge-wrap.d-flex {
-        gap: 0.5rem;
-    }
-    .badge svg {
-        width: 18px;
-    }
-    @media (max-width: 1199px) {
-        .responsive__hide {
-            display: none;
-        }
-        .responsive__show {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-
-        }
-        .badge {
-            word-wrap: break-word;
-            white-space: normal;
-        }
-
-    }
-
-    @media (max-width: 629px) {
-        .table thead th  {
-            max-width: 200px !important;
-        }
-        .table td {
-            max-width: 200px !important;
-        }
-    }
-    @media (max-width: 539px) {
-        .responsive__mobile-3 {
-            width: 160px;!important;
-            word-wrap: break-word;!important;
-            white-space: normal;!important;
-        }
-        .badge svg {
-            width: 30px;
-        }
-    }
-
-    @media (max-width: 419px) {
-        .responsive__mobile-3{
-            width: 140px !important;
-        }
-
-        .responsive__break {
-            display: block !important;
-        }
-    }
-
-    @media (max-width: 429px) {
-        .responsive__mobile-1 {
-            padding: 0.5rem !important;
-            width: 36px !important;
-        }
-
-        .responsive__mobile-2 {
-            padding: 0.5rem !important;
-        }
-    }
-</style>
-
-    <script>
-        window.onload = function () {
-            var i, l, trs = document.getElementsByClassName('entry');
-            for (i = 0, l = trs.length; i < l; i++) {
-                attachClickHandler(trs[i]);
-                var checkbox = trs[i].querySelector('input');
-                if (checkbox) {
-                    if (checkbox.checked) {
-                        trs[i].classList.add('done');
-                    }
-                }
-            }
-        };
-
-        function clickHandler() {
-            var checkbox = this.querySelector('input');
-            if (this.classList.contains('done')) {
-                this.classList.remove('done');
-                checkbox.checked = false;
-            } else {
-                this.classList.add('done');
-                checkbox.checked = true;
-            }
-        }
-
-        function attachClickHandler(tr) {
-            tr.onclick = function () {
-                if (event.target.tagName != 'INPUT') {
-                    event.preventDefault();
-                }
-                clickHandler.call(tr);
-            };
-        }
-
-    </script>
-
-    <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        var checkboxes = document.querySelectorAll('input[type="checkbox"][name^="done_"]');
-
-        // Using Bootstrap's tooltip
-        var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-        var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl)
-        })
-
-        checkboxes.forEach(function (checkbox) {
-            checkbox.addEventListener('change', function () {
-                var row = this.closest('tr');
-
-                if (this.checked) {
-                    row.style.backgroundColor = 'rgba(20,23,39,0.15)';
-
-                } else {
-                    row.style.backgroundColor = '';
-                }
-            });
-        });
-
-        var rows = document.querySelectorAll('tbody tr');
-
-        rows.forEach(row => {
-            row.addEventListener('click', function (event) {
-                if (event.target.type !== 'checkbox') {
-                    var checkbox = this.querySelector('input[type="checkbox"][name^="done_"]');
-                    if (!checkbox.disabled) {
-                        checkbox.checked = !checkbox.checked;
-                        checkbox.dispatchEvent(new Event('change'));
-                    }
-                }
-            });
-
-            row.addEventListener('mouseover', function () {
-                var checkbox = this.querySelector('input[type="checkbox"][name^="done_"]');
-                if (!checkbox.checked) {
-                    this.style.cursor = 'pointer';
-                    this.style.backgroundColor = 'rgba(20,23,39,0.05)';
-                }
-            });
-
-            row.addEventListener('mouseout', function () {
-                var checkbox = this.querySelector('input[type="checkbox"][name^="done_"]');
-                if (!checkbox.checked) {
-                    this.style.backgroundColor = '';
-                }
-            });
-        });
-    });
-</script>
-{% endblock %}
+{% endblock content %}
