readd: color changes

--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" id="submitTasksBtn" class="w-100 btn bg-gradient-primary" value="Submit tasks"/>
+            <input type="submit" id="submitTasksBtn" class="w-100 btn bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
         </div>
     </div>
 </form>
